--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -7,6 +7,8 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<link rel="icon" href="./media/images/kiteLogo.ico" />
+
 		<!-- Bootstrap -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -23,7 +25,7 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
-		<title>React App</title>
+		<title>Kite</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
