--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,8 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<link rel="icon" href="./media/images/logo.ico" />
+
 		<!-- Bootstrap -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -24,7 +26,7 @@
 			referrerpolicy="no-referrer"
 		/>
 
-		<title>React App</title>
+		<title>Zerodha</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
